--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,16 @@
-<p>
-  login works!
-</p>
+<div>
+  <form autocomplete="false" class="form login-form">
+    <h4>login</h4>
+    <div class="control">
+      <label for="email">Email</label>
+      <input id="email" required placeholder="Email" type="text">
+    </div>
+    <div class="control">
+      <label for="password">Password</label>
+      <input autocomplete="new-password" id="password" required placeholder="Password" type="password">
+    </div>
+    <div class="control">
+      <button type="submit">Login</button>
+    </div>
+  </form>
+</div>
