--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,18 @@
-<div>
-  <form autocomplete="false" class="form login-form">
-    <h4>login</h4>
-    <div class="control">
-      <label for="email">Email</label>
-      <input id="email" required placeholder="Email" type="text">
-    </div>
-    <div class="control">
-      <label for="password">Password</label>
-      <input autocomplete="new-password" id="password" required placeholder="Password" type="password">
-    </div>
-    <div class="control">
-      <button type="submit">Login</button>
-    </div>
-  </form>
+<div class="login-form-container">
+  <div class="form-container">
+    <form autocomplete="false" class="form">
+      <h4>login</h4>
+      <div class="control">
+        <label for="email">Email</label>
+        <input id="email" required type="text">
+      </div>
+      <div class="control">
+        <label for="password">Password</label>
+        <input autocomplete="new-password" id="password" required type="password">
+      </div>
+      <div class="control">
+        <button class="btn" type="submit">Login</button>
+      </div>
+    </form>
+  </div>
 </div>
