--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,24 +1,26 @@
-<div>
-  <form autocomplete="false" class="form signup-form">
-    <h4>Sign up</h4>
-    <div class="control">
-      <label for="name">Name</label>
-      <input required id="name" placeholder="name" type="text">
-    </div>
-    <div class="control">
-      <label for="phone">Phone</label>
-      <input required id="phone" placeholder="Phone" type="text">
-    </div>
-    <div class="control">
-      <label for="email">Email</label>
-      <input required id="email" placeholder="Email" type="text">
-    </div>
-    <div class="control">
-      <label for="password">Password</label>
-      <input required autocomplete="new-password" id="password" placeholder="Password" type="password">
-    </div>
-    <div class="control">
-      <button type="submit">Signup</button>
-    </div>
-  </form>
+<div class="signup-form-container">
+  <div class="form-container">
+    <form autocomplete="false" class="form">
+      <h4>Sign up</h4>
+      <div class="control">
+        <label for="name">Name</label>
+        <input required id="name" type="text">
+      </div>
+      <div class="control">
+        <label for="phone">Phone</label>
+        <input required id="phone" type="text">
+      </div>
+      <div class="control">
+        <label for="email">Email</label>
+        <input required id="email" type="text">
+      </div>
+      <div class="control">
+        <label for="password">Password</label>
+        <input required autocomplete="new-password" id="password" type="password">
+      </div>
+      <div class="control">
+        <button class="btn" type="submit">Signup</button>
+      </div>
+    </form>
+  </div>
 </div>
