--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,8 @@ body {
   align-items: flex-start;
   min-width: 45rem;
   padding: 5rem 4rem;
-  background-color: #ff7b37;
+  padding-bottom: 0;
+  background-color: #2980b9;
   color: #fff;
   font-size: 1.6rem;
   box-shadow: 9px 13px 7px 0px rgba(0, 0, 0, 0.4);
@@ -55,25 +56,56 @@ body {
   width: 100%;
 }
 
-.control>label {
+.control label {
   color: #eee;
 }
 
-.control>input {
+.control input {
   margin-top: 0.8rem;
   padding: 0.8rem;
   padding-left: 0;
   border: none;
-  border-bottom: 1.5px solid hsla(20, 100%, 91%, 1);
-  background-color: #ff7b37;
+  border-bottom: 1.5px solid rgba(255, 255, 255, 0.4);
+  background-color: #2980b9;
   color: #fff;
   font-size: 1.8rem;
   width: 100%;
   outline: 0;
+  transition: all 0.2s ease-in-out;
   /* font-family: Helvetica, sans-serif */
 }
 
-input:-webkit-autofill {
+.control input:focus {
+  border-bottom: 1.5px solid rgba(255, 255, 255, 0.9);
+}
+
+.control>.btn {
+  align-self: center;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-size: 1.6rem;
+  width: 100%;
+  background-color: #ff7f3e;
+  padding: 1rem 2.5rem;
+  color: #ffff;
+  box-shadow: 5px 4px 7px 0px rgba(0, 0, 0, 0.4);
+  outline: 0;
+  transition: all 0.3s ease-in-out;
+  margin-top: -1rem;
+  margin-bottom: 1.5rem;
+}
+
+.control>.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 7px 9px 7px 0px rgba(0, 0, 0, 0.3)
+}
+
+.control>.btn:active {
+  transform: translateY(0.5rem);
+  box-shadow: 5px 4px 7px 0px rgba(0, 0, 0, 0.4);
+}
+
+.control input:-webkit-autofill {
   border: none;
   -webkit-text-fill-color: #fff;
   border-bottom: 1.5px solid hsla(20, 100%, 91%, 1);
@@ -84,9 +116,13 @@ input:-webkit-autofill {
   .form {
     min-width: 85%;
     padding: 2rem;
+    padding-bottom: 0;
   }
   .form>h4 {
     font-size: 2.6rem;
     margin-bottom: 1rem;
+  }
+  .control>.btn {
+    margin-top: -0.5rem;
   }
 }
