--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,7 @@ body {
   font-size: 3.2rem;
   margin-bottom: 0.6rem;
   align-self: center;
+  margin-top: -2rem;
 }
 
 .control {
@@ -97,12 +98,12 @@ body {
 
 .control>.btn:hover {
   transform: translateY(-0.3rem);
-  box-shadow: 7px 9px 7px 0px rgba(0, 0, 0, 0.3)
+  box-shadow: 6px 10px 16px 0px rgba(0, 0, 0, 0.4);
 }
 
 .control>.btn:active {
   transform: translateY(0.5rem);
-  box-shadow: 5px 4px 7px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 6px 8px 7px 0px rgba(0, 0, 0, 0.4);
 }
 
 .control input:-webkit-autofill {
@@ -120,6 +121,7 @@ body {
   }
   .form>h4 {
     font-size: 2.6rem;
+    margin-top: 0;
     margin-bottom: 1rem;
   }
   .control>.btn {
