alter-way markup in html

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,6 +12,9 @@
       </div>
       <div class="control">
         <button class="btn" type="submit">Login</button>
+        <p class="alter-way">
+          <a [routerLink]="'/signup'">Create a new account</a>
+        </p>
       </div>
     </form>
   </div>
