--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -20,6 +20,9 @@
       </div>
       <div class="control">
         <button class="btn" type="submit">Signup</button>
+        <p class="alter-way">
+          <a [routerLink]="'/login'">Already have an account?</a>
+        </p>
       </div>
     </form>
   </div>
