--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,10 @@
 <div class="login-form-container">
   <div class="form-container">
     <form autocomplete="false" class="form">
-      <h4>Login</h4>
+      <h4 class="form-header">
+        Login
+        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+      </h4>
       <div class="control">
         <label for="email">Email</label>
         <input id="email" required type="text">
