--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,9 @@
 <div class="signup-form-container">
   <div class="form-container">
     <form autocomplete="false" class="form">
-      <h4>Sign up</h4>
+      <h4 class="form-header">Sign up
+        <i class="fa fa-sign-in" aria-hidden="true"></i>
+      </h4>
       <div class="control">
         <label for="name">Name</label>
         <input required id="name" type="text">
