--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,10 @@ body {
   margin-top: -2rem;
 }
 
+.form>.form-header>i {
+  margin-bottom: 0.5rem;
+}
+
 .control {
   display: flex;
   flex-direction: column;
