--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div [@slideInOut]="triggerAnimation()" id=" mainContainer ">
-  <router-outlet></router-outlet>
+<div [@slideInOut]="triggerAnimation(outlet)" id="mainContainer">
+  <router-outlet #outlet="outlet" ></router-outlet>
 </div>
