login form validation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,27 @@
       </h4>
       <div class="control">
         <label for="email">Email</label>
-        <input id="email" required type="text">
+        <input ngModel #emailField="ngModel" name="email" id="email" email="true" required type="email">
+        <div class="form-error" *ngIf="emailField.touched && !emailField.valid">
+          <div *ngIf="emailField.errors.required">
+            Email is required
+          </div>
+          <div *ngIf="emailField.errors.email && !emailField.errors.required">
+            Invalid Email
+          </div>
+        </div>
       </div>
       <div class="control">
         <label for="password">Password</label>
-        <input autocomplete="new-password" id="password" required type="password">
+        <input ngModel #password="ngModel" minlength="4" name="password" autocomplete="new-password" id="password" required type="password">
+        <div class="form-error" *ngIf="password.touched && !password.valid">
+          <div *ngIf="password.errors.required">
+            Password is required
+          </div>
+          <div *ngIf="password.errors.minlength">
+            Password must be at least 4 characters long.
+          </div>
+        </div>
       </div>
       <div class="control">
         <button class="btn" type="submit">Login</button>
