validation for signup form

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
             Email is required
           </div>
           <div *ngIf="emailField.errors.email && !emailField.errors.required">
-            Invalid Email
+            Invalid email address 
           </div>
         </div>
       </div>
