--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,5 @@
-<p>
-  user works!
-</p>
+<div class="container">
+  <div class="name">Hi, {{getUserEmail()}}</div>
+
+  <button class="btn" (click)="logout()">logout</button>
+</div>
