--- a/src/styles.css
+++ b/src/styles.css
@@ -106,34 +106,37 @@ button:disabled {
   border-bottom: 1.5px solid rgba(255, 255, 255, 0.9);
 }
 
-.control>.btn {
+.btn {
   align-self: center;
   border: 1px solid transparent;
   border-radius: 8px;
   font-size: 1.6rem;
-  width: 100%;
   background-color: #ff7f3e;
   padding: 1rem 2.5rem;
   color: #ffff;
   box-shadow: 5px 4px 7px 0px rgba(0, 0, 0, 0.4);
   outline: 0;
   transition: all 0.3s ease-in-out;
-  margin-top: -1rem;
-  margin-bottom: 1.5rem;
   cursor: pointer;
 }
 
-.control>.btn:not([disabled]):hover {
+.control>.btn {
+  margin-top: -1rem;
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+
+.btn:not([disabled]):hover {
   transform: translateY(-0.3rem);
   box-shadow: 6px 10px 16px 0px rgba(0, 0, 0, 0.4);
 }
 
-.control>.btn:not([disabled]):active {
+.btn:not([disabled]):active {
   transform: translateY(0.5rem);
   box-shadow: 6px 8px 7px 0px rgba(0, 0, 0, 0.4);
 }
 
-.control>.btn:disabled {
+.btn:disabled {
   background-color: rgba(255, 126, 61, 0.7);
   color: rgba(255, 255, 255, 0.5);
   transform: none;
