--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -58,6 +58,24 @@
           <a [routerLink]="'/login'">Already have an account?</a>
         </p>
       </div>
+      <div class="social-links-container">
+        <div class="hr"></div>
+        <div class="tag">Or, Sign in with</div>
+        <div class="social-links">
+          <div class="social-link facebook">
+            <img src="./assets/facebook.svg">
+          </div>
+          <div class="social-link twitter">
+              <img src="./assets/twitter.png">
+          </div>
+          <div class="social-link google">
+              <img src="./assets/google.png">
+          </div>
+          <div class="social-link github">
+              <img src="./assets/github.png">
+          </div>
+        </div>
+      </div>
     </form>
   </div>
 </div>
