social links refactored & move to new component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,6 +35,11 @@
           <a [routerLink]="'/signup'">Create a new account</a>
         </p>
       </div>
+      <div class="social-links-container">
+        <div class="hr"></div>
+        <div class="tag">Or, Sign in with</div>
+        <app-social-links></app-social-links>
+      </div>
     </form>
   </div>
 </div>
