--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -61,20 +61,7 @@
       <div class="social-links-container">
         <div class="hr"></div>
         <div class="tag">Or, Sign in with</div>
-        <div class="social-links">
-          <div class="social-link facebook">
-            <img src="./assets/facebook.svg">
-          </div>
-          <div class="social-link twitter">
-              <img src="./assets/twitter.png">
-          </div>
-          <div class="social-link google">
-              <img src="./assets/google.png">
-          </div>
-          <div class="social-link github">
-              <img src="./assets/github.png">
-          </div>
-        </div>
+        <app-social-links></app-social-links>
       </div>
     </form>
   </div>
