--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ button:disabled {
 }
 
 .form-container {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -46,6 +46,7 @@ button:disabled {
   align-items: flex-start;
   min-width: 45rem;
   padding: 5rem 4rem;
+  margin: 3.5rem 0;
   padding-bottom: 0;
   background-color: #2980b9;
   color: #fff;
